<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DebugActivity">

    <Button
        android:id="@+id/recvMsgTCPBtn"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/recvtcpmessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendMsgTCPBtn" />

    <Button
        android:id="@+id/sendMsgTCPBtn"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/sendtcpmessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnectTCPBtn" />

    <Button
        android:id="@+id/connectTCPBtn"
        android:layout_width="144dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/connecttcpbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="188dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/startbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/disconnectTCPBtn"
        android:layout_width="139dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/disconnecttcpbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectTCPBtn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/debug_wifi_tcp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="135dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/debug_wifi_udp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn" />

    <Button
        android:id="@+id/createUDPBtn"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/connectudpbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/disconnectUDPBtn"
        android:layout_width="136dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:text="@string/disconnectudpbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUDPBtn" />

    <Button
        android:id="@+id/sendUDPBtn"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:text="@string/sendudpmsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disconnectUDPBtn" />

    <Button
        android:id="@+id/recvUDPBtn"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/recvudpmsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendUDPBtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="49dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_deubg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>